# Android_ImageMagick7

./: CMakeLists.txt
